# artisan

./: .appveyor.yml  .bintray.json  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CommCENTER306Python2.6.py  CommCENTER309Python2.6.py  CommCENTER309Python3.py  CommHH506RApython2.6.py  CommHH506RApython3.py  CommHHM28.py  FUNDING.yml  Gemfile  INSTALL.md  ISSUE_TEMPLATE.md  Info.plist  Info3.plist  README.md  README.txt  _config.yml  artisan.pro  artisan.py  artisan.pyw  artisan.spec  build-centos.sh  build-centos64.sh  build-linux.sh  build-mac.sh  build-mac3.sh  build-ubuntu.sh  build-win.bat  build-win3.bat  build-windows.bat  build3.sh  checklinks.sh  docker-compose.yml  (+17 more)
src/: .travis.yml  Artisan.entitlements  Assets.car  CommCENTER306Python2.6.py  CommCENTER309Python3.py  CommHH506RApython2.6.py  CommHH506RApython3.py  DAVE.athm  Info.plist  Info3.plist  Info35.plist  README.txt  artisan-AppImage.yml  artisan-alog.xml  artisan-aset.xml  artisan-athm.xml  artisan-linux.spec  artisan-mac.spec  artisan-mac_universal.spec  artisan-wg.xml  artisan-win-legacy.spec  artisan-win.spec  artisan.icns  artisan.pro  artisan.py  artisan.spec  artisanAlarms.icns  artisanPalettes.icns  artisanProfile.icns  artisanSettings.icns  artisanTheme.icns  artisanWheel.icns  build-centos-pi.sh  build-centos-rpi.sh  build-centos.sh  build-centos64.sh  build-derived-win.bat  build-derived.sh  build-linux-buster.sh  build-linux-pkg.sh  (+65 more)
src/Wheels/Cupping/: aroma.wg  flavor.wg  taste.wg
src/Wheels/Other/: artisan.wg  coffeevarietals.wg  sweetmarias.wg
src/Wheels/Roasting/: flavordefects.wg  phases.wg
src/artisanlib/: __init__.py  acaia.py  aillio.py  aillio_r1.py  aillio_r2.py  alarms.py  arabic_reshaper.py  async_comm.py  atypes.py  autosave.py  axis.py  background.py  batches.py  ble.py  ble_port.py  bluedot.py  calculator.py  canvas.py  colors.py  colortrack.py  comm.py  command_utility.py  comparator.py  compat.py  cropster.py  cup_profile.py  curves.py  designer.py  device_protocol.py  device_registry.py  devices.py  dialogs.py  event_button_style.py  events.py  filters.py  giesen.py  hibean.py  hottop.py  ikawa.py  interceptor.py  (+59 more)
src/artisanlib/aillio/: __init__.py  aillio.py  aillio_r2.py
src/comm/: CommCENTER306Python2.6.py  CommCENTER309Python2.6.py  CommCENTER309Python3.py  CommFujiExamplePython2.6.py  CommHH506RApython2.6.py  CommHH506RApython3.py  CommHH806AUpython2.6.py  CommHHM28.py  CommHottopPython2.7.py  CommTC4aArtisanPython.py
src/const/: UIconst.py
src/debian/DEBIAN/: control  postinst  prerm
src/help/: alarms_help.py  autosave_help.py  energy_help.py  eventannotations_help.py  eventbuttons_help.py  eventsliders_help.py  keyboardshortcuts_help.py  modbus_help.py  mqtt_help.py  programs_help.py  s7_help.py  symbolic_help.py  transposer_help.py
src/includes/: alarmclock.eot  artisan.tpl  artisan_public_key.pem  bigtext.js  browserconfig.xml  fitty_patched.js  green.tpl  logging.yaml  ranking-template.htm  report-template.htm  roast-template.htm  scale_widget.tpl  site.webmanifest
src/includes/Machines/ARC/: 800.aset  Roasters.aset  S.aset
src/includes/Machines/Aillio/: Bullet R1 IBTS.aset  Bullet R1 V2.aset  Bullet R1.aset  Bullet_R1.aset  Bullet_R1_IBTS.aset  Bullet_R2.aset
src/includes/Machines/Ambex/: YM.aset
src/includes/Machines/Arc/: 800.aset  800_RTD.aset  Roasters.aset  S.aset  S_RTD.aset
src/includes/Machines/Atilla/: GOLD plus 7".aset  GOLD_plus_7'' II.aset  GOLD_plus_7''.aset  GOLD_plus_7''_2022.aset  GOLD_plus_7''_II.aset  GOLD_plus_7''_II_Control.aset  GOLD_plus_7''_II_Control_Auto.aset
src/includes/Machines/BC/: Roaster.aset
src/includes/Machines/BeanGo/: Cube_X.aset
src/includes/Machines/BeanGo Cube/: X.aset
src/includes/Machines/Behmor/: 1kg-alt.aset  1kg.aset  Jake.aset
src/includes/Machines/Bella/: TW.aset
src/includes/Machines/BellaTW/: EVO.aset
src/includes/Machines/Berto/: Autonics_Control.aset  D.aset  Essential.aset  One.aset  R.aset
src/includes/Machines/Besca/: BSC.aset  BSC_automatic.aset  BSC_full_automatic.aset  BSC_manual.aset  BSC_manual_v1.aset  BSC_manual_v2.aset  Bee.aset  Bee_v2.aset
src/includes/Machines/Bideli/: Roaster.aset
src/includes/Machines/BlueKing/: BK.aset
src/includes/Machines/Brambati/: PLC.aset
src/includes/Machines/Buehler/: RM_20_Playone.aset  RM_20_Simatic.aset  RM_60-240.aset  Roastmaster.aset
src/includes/Machines/Bühler/: RM_20_Playone-CONTROL.aset  (+4 more)
src/misc/: KERNpython3.py
src/patches/: pymodbus.patch
src/plus/: __init__.py  account.py  blend.py  config.py  connection.py  controller.py  countries.py  login.py  notifications.py  queue.py  register.py  requirements.txt  roast.py  schedule.py  stock.py  sync.py  util.py  weight.py
src/proto/: IkawaCmd.proto  IkawaCmd_pb2.py  IkawaCmd_pb2.pyi  __init__.py
src/pyinstaller_hooks/rthooks/: pyi_rth_mplconfig.py
src/raspbian/DEBIAN/: control
src/test/: plugins.py
src/test/artisanlib/: test_main.py
src/test/data/: profile1.csv  roest1.json  roest2.csv  roest2.json
src/test/resources/: profile1.alog  profile1.json
src/test/sanity/: test_import.py  test_load_save.py
src/test/unitary/: test_basic.py
src/translations/: artisan_ar.qm  artisan_ar.ts  artisan_bg.qm  artisan_bg.ts  artisan_cs.qm  artisan_cs.ts  artisan_da.qm  artisan_da.ts  artisan_de.qm  artisan_de.ts  artisan_el.qm  artisan_el.ts  artisan_es.qm  artisan_es.ts  artisan_fa.qm  artisan_fa.ts  artisan_fi.qm  artisan_fi.ts  artisan_fr.qm  artisan_fr.ts  artisan_gd.qm  artisan_gd.ts  artisan_he.qm  artisan_he.ts  artisan_hu.qm  artisan_hu.ts  artisan_id.qm  artisan_id.ts  artisan_it.qm  artisan_it.ts  artisan_ja.qm  artisan_ja.ts  artisan_ko.qm  artisan_ko.ts  artisan_lv.qm  artisan_lv.ts  artisan_nl.qm  artisan_nl.ts  artisan_no.qm  artisan_no.ts  (+43 more)
src/ui/: BlendDialog.ui  EnergyWidget.ui  MeasureDialog.ui  SetupDialog.ui  SetupWidget.ui  SliderCalculatorDialog.ui
src/uic/: BlendDialog.py  EnergyWidget.py  MeasureDialog.py  SetupDialog.py  SetupWidget.py  SliderCalculatorDialog.py  __init__.py
(+1375 files in other folders)
